--- a/index.html
+++ b/index.html
@@ -1,55 +1,108 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-    <!--Do the HTML layout-->
-    <!--Include the images in folder-->
-    <!--Header-->
-    <div class='container'>
-    <div class='header'>
-        <h1>Thunder, Thunder, Thundercats!!!</h1>
-    </div><br><br>
-    <!--Press any key to start-->
-    <div class='row col-md-12'>
-    <section id='start'>
-        <h2>Press any key to start</h2>
-    </section>
-    </div>
-    <!--Wins-->
-    <section id='wins'>
-        <h2>Wins:</h2>
-    </section>
-    <!--Current Word-->
-    <section id='current'>
-        <h2>Current Word</h2>
-    </section>
-    <!--Word-->
-    <section id='word'>
-        <h3></h3>
-    </section>
-    <!--Number of guesses remaining-->
-    <section id='gueses_r'>
-        <h2>Guesses remaining</h2>
-    </section>
-    <section id='nguesses'>
+<!-- Step 1: Create the Layout. -->
+<!-- Step 2: Flag key sections with specific id names. These will be replaced by JavaScript -->
+<!-- Step 2: Link to JavaScript (at end of the file) -->
 
-    </section>
-    <!--Letters already guessed-->
-    <section id='already'>
-        <h2>Letters already guessed</h2>
-    </section>
-    <section id='appendg'>
-        <p id='append'></p>
-    </section>
+<!DOCTYPE html>
+
+<html lang="en-us">
+
+  <head>
+
+    <meta charset='UTF-8'>
+    <title>Coding Boot Camp - Word Guess</title>
+
+    <!-- Bootstrap CDN -->
+    <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+  </head>
+
+  <body>
+
+    <!-- Bootstrap Container will hold everything. -->
+    <div class="container">
+
+      <!-- Jumbotron holds the title section. -->
+      <div class='jumbotron'>
+        <div class='container'>
+          <h1>Thunder, Thunder, Thundercats!!!</h1>
+          <h2>Guess the name of the main characters!</h2>
+          <small>Click any letter to begin...</small>
+        </div>
+      </div>
+
+      <!-- Game counters held here. cards are being used to hold various sections. -->
+      <div class="row">
+        <div class="col-lg-12">
+
+          <!-- First card: Holds the Word to Guess (blanks and guessed word). -->
+          <div class="card card-default">
+            <div class="card-heading">
+              <h3 class="card-title"><strong>Word to Guess</strong></h3>
+            </div>
+
+            <div class="card-body">
+
+              <!-- This h3 section called word-blanks is what we"ll be replacing with letters as the user guesses. Pay particular attention to the id called ***word-blanks***. We"ll be referencing this in the JavaScript. -->
+              <h3 id="word-blanks">_ _ _ _ _ _ _ _ _ </h3>
+
+            </div>
+
+          </div>
+
+          <!-- Second card: Holds the list of Wrong User Guesses. -->
+          <div class="card card-default">
+            <div class="card-body">
+
+              <!-- This span section called wrong-guesses is where we will be dumping the wrong guesses. Pay particular attention to the id called ****wrong-guesses***. We"ll be referencing this in the JavaScript. -->
+              <strong>Wrong Guesses: </strong> <span id="wrong-guesses"></span>
+
+            </div>
+          </div>
+
+          <!-- Third card: Holds the Number of Wrong Guesses. -->
+          <div class="card card-default">
+            <div class="card-body">
+
+              <!-- This span is where we"ll dump the number of guesses left. Pay attention to the id called ****guesses-left**** we"ll be referencing this in the JavaScript. -->
+              <strong>Guesses Left: </strong> <span id="guesses-left">9</span>
+
+            </div>
+
+          </div>
+
+          <!-- Fourth card: Holds the number of Wins. -->
+          <div class="card card-default">
+
+            <div class="card-body">
+
+              <!-- This span called win-counter is where we"ll be dumping the number of wins. Pay attention to the id called ****win-counter*** we"ll be referencing this in the JavaScript. -->
+              <strong>Wins: </strong> <span id="win-counter">0</span>
+
+            </div>
+
+          </div>
+
+          <!-- Fifth card: Holds the number of Losses. -->
+          <div class="card card-default">
+            <div class="card-body">
+
+              <!-- This span called loss-counter is where we"ll be dumping the number of losses. Pay attention to the id called ****loss-counter***; we"ll be referencing this in the JavaScript. -->
+              <strong>Losses: </strong> <span id="loss-counter">0</span>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
     </div>
-    <img src="assets/images/thundercats.png">
-    <script type="text/javascript" src="assets/javascript/game.js"></script>
-</body>
+
+    <!-- Adds a link to the JavaScript file. Loaded at the bottom so it waits for the HTML content to display first. If you put this at the top it will crash, because the HTML IDs won"t exist yet.-->
+    <script src="assets/javascript/game.js"></script>
+
+  </body>
+
 </html>
+
